--- a/index.html
+++ b/index.html
@@ -7,35 +7,37 @@
     <title>Add Product Form</title>
 </head>
 <body>
+    <div id="form-box">
+        <h1>Add Video Game</h1>
+        <div id="validation-summary">
+            <p>Errors fo here...</p>
+        </div>
 
-    <h1>Add Video Game</h1>
-    <div id="validation-summary">
-        <p>Errors fo here...</p>
+        <form>
+            <label for="title">Title: </label>
+            <input id="title" type="text">
+            <br>
+
+            <label for="price">Price: </label>
+            <input id="price" type="text">
+            <br>
+
+            <label for="rating">Rating: </label>
+            <select id="rating">
+                <option>Please choose a rating</option>
+                <option>E</option>
+                <option>T</option>
+                <option>M</option>
+            </select>
+            <br>
+
+            <label for="online">Online Only?</label>
+            <input type="checkbox" id="online">
+            <br>
+
+            <input type="button" value="Add New Video Game">
+        </form>
     </div>
-
-    <form>
-        <label for="title">Title: </label>
-        <input id="title" type="text">
-        <br>
-
-        <label for="price">Price: </label>
-        <input id="price" type="text">
-        <br>
-
-        <label for="rating">Rating: </label>
-        <select id="rating">
-            <option>Please choose a rating</option>
-            <option>E</option>
-            <option>T</option>
-            <option>M</option>
-        </select>
-        <br>
-
-        <input type="checkbox" id="online">
-        <label for="online">Online Only?</label>
-        <br>
-
-        <input type="button" value="Add New Video Game">
-    </form>
+    <script src="/js/main.js"></script>
 </body>
 </html>
