Implemented the displayGame method

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <input type="button" value="Add New Video Game">
         </form>
     </div>
+    <div id="display">
+    </div>
     <script src="/js/main.js"></script>
 </body>
 </html>
