--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <div id="form-box">
         <h1>Add Video Game</h1>
-        <div id="validation-summary">
-            <p>Errors fo here...</p>
+        <div>
+            <ul id="validation-summary">
+
+            </ul>
         </div>
 
         <form>
@@ -24,10 +26,10 @@
 
             <label for="rating">Rating: </label>
             <select id="rating">
-                <option>Please choose a rating</option>
-                <option>E</option>
-                <option>T</option>
-                <option>M</option>
+                <option value="">Please choose a rating</option>
+                <option value="E">Everyone</option>
+                <option value="T">Teen</option>
+                <option value="M">Mature</option>
             </select>
             <br>
 
